# rb2024

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  envs.sh  script.sql
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
migrations/2024-02-11-211413_create_tables/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs
src/handlers/: handlers.rs
src/models/: client.rs  last_transaction.rs  mod.rs  schema.rs  transaction.rs
src/repository/: db.rs
